// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`A.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

=====================================output=====================================
/* @flow */

================================================================================
`;

exports[`index.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */
require('A');

=====================================output=====================================
/* @flow */
require("A");

================================================================================
`;
